--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -4,5 +4,6 @@ WORKDIR /usr/src/app
 COPY package.json /usr/src/app/
 RUN npm install
 COPY . /usr/src/app
+COPY .env.prod /usr/src/app/.env
 EXPOSE 3000
 CMD ["npm", "start"]
