--- a/docker/node/package.json
+++ b/docker/node/package.json
@@ -21,8 +21,12 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "bootstrap": "^3.3.7",
+        "dotenv": "^8.2.0",
         "express": "^4.16.2",
+        "http-assert": "^1.4.1",
+        "knex": "^0.95.4",
         "multiparty": "^4.2.1",
+        "mysql": "^2.18.1",
         "nodemon": "^1.19.2",
         "querystring": "^0.2.0",
         "socket.io": "^2.0.4"
