--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -17,6 +17,16 @@ server {
        try_files $uri $uri/ /index.php$is_args$args;
    }
 
+   location /node {
+        proxy_pass http://node:3000/;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
+
    # uncomment to avoid processing of calls to non-existing static files by Yii
    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
    #    try_files $uri =404;
@@ -35,41 +45,41 @@ server {
    }
 }
 
-server {
-   charset utf-8;
-   client_max_body_size 128M;
+# server {
+#    charset utf-8;
+#    client_max_body_size 128M;
 
-   listen 8082; ## listen for ipv4
-   #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
+#    listen 8082; ## listen for ipv4
+#    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-   server_name q-banbung-docker.local;
-   root /var/www/html/frontend/web;
-   index index.php;
+#    server_name q-banbung-docker.local;
+#    root /var/www/html/frontend/web;
+#    index index.php;
 
-   access_log  /var/log/nginx/frontend-access.log;
-   error_log   /var/log/nginx/frontend-error.log;
+#    access_log  /var/log/nginx/frontend-access.log;
+#    error_log   /var/log/nginx/frontend-error.log;
 
-   location / {
-       # Redirect everything that isn't a real file to index.php
-       try_files $uri $uri/ /index.php$is_args$args;
-   }
+#    location / {
+#        # Redirect everything that isn't a real file to index.php
+#        try_files $uri $uri/ /index.php$is_args$args;
+#    }
 
-   # uncomment to avoid processing of calls to non-existing static files by Yii
-   #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-   #    try_files $uri =404;
-   #}
-   #error_page 404 /404.html;
+#    # uncomment to avoid processing of calls to non-existing static files by Yii
+#    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+#    #    try_files $uri =404;
+#    #}
+#    #error_page 404 /404.html;
 
-   location ~ \.php$ {
-       include fastcgi_params;
-       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-       fastcgi_pass   php_srisawat:9000;
-       try_files $uri =404;
-   }
+#    location ~ \.php$ {
+#        include fastcgi_params;
+#        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#        fastcgi_pass   php_srisawat:9000;
+#        try_files $uri =404;
+#    }
 
-   location ~ /\.(ht|svn|git) {
-       deny all;
-   }
-}
+#    location ~ /\.(ht|svn|git) {
+#        deny all;
+#    }
+# }
 
 
