--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -17,7 +17,7 @@ server {
        try_files $uri $uri/ /index.php$is_args$args;
    }
 
-   location /node {
+   location /node/ {
         proxy_pass http://node:3000/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
