--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -27,6 +27,12 @@ server {
         proxy_set_header Host $host;
     }
 
+    location /kiosk/ {
+      root   /var/www/html/chainatweb;
+      index  index.html;
+      try_files $uri $uri/ /index.html;
+    }
+
    # uncomment to avoid processing of calls to non-existing static files by Yii
    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
    #    try_files $uri =404;
