--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -27,7 +27,7 @@ server {
         proxy_set_header Host $host;
     }
 
-    location /kiosk/ {
+    location /kioskweb/ {
       root   /var/www/html/chainatweb;
       index  index.html;
       try_files $uri $uri/ /index.html;
