--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -1,23 +1,43 @@
 server {
-   charset utf-8;
-   client_max_body_size 128M;
+    charset utf-8;
+    client_max_body_size 128M;
+    listen 80;
+    server_name q.chainathospital.org;
 
-   listen 80; ## listen for ipv4
-   #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
+    set $base_root /var/www/html;
+    root $base_root;
 
-   server_name q-banbung-docker.local;
-   root /var/www/html/frontend/web;
-   index index.php;
+    error_log /var/log/nginx/frontend.error.log warn;
+    access_log /var/log/nginx/frontend.access.log main;
+    index index.php index.html;
 
-   access_log  /var/log/nginx/frontend-access.log;
-   error_log   /var/log/nginx/frontend-error.log;
+    location / {
+        root $base_root/frontend/web;
+        try_files $uri $uri/ /frontend/web/index.php$is_args$args;
 
-   location / {
-       # Redirect everything that isn't a real file to index.php
-       try_files $uri $uri/ /index.php$is_args$args;
-   }
+        # omit static files logging, and if they don't exist, avoid processing by Yii (uncomment if necessary)
+        #location ~ ^/.+\.(css|js|ico|png|jpe?g|gif|svg|ttf|mp4|mov|swf|pdf|zip|rar)$ {
+        #    log_not_found off;
+        #    access_log off;
+        #    try_files $uri =404;
+        #}
 
-   location /node/ {
+        location ~ ^/assets/.+\.php(/|$) {
+            deny all;
+        }
+    }
+
+    location /kioskregis/ {
+        proxy_pass http://kiosk:8080/;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+    }
+
+    location /node/ {
         proxy_pass http://node:3000/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -27,65 +47,51 @@ server {
         proxy_set_header Host $host;
     }
 
-    location /kioskweb/ {
-      root   /var/www/html/chainatweb;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
+    location /admin {
+        alias $base_root/backend/web/;
+
+        # redirect to the URL without a trailing slash (uncomment if necessary)
+        #location = /admin/ {
+        #    return 301 /admin;
+        #}
+
+        # prevent the directory redirect to the URL with a trailing slash
+        location = /admin {
+            # if your location is "/backend", try use "/backend/backend/web/index.php$is_args$args"
+            # bug ticket: https://trac.nginx.org/nginx/ticket/97
+            try_files $uri /backend/web/index.php$is_args$args;
+        }
+
+        # if your location is "/backend", try use "/backend/backend/web/index.php$is_args$args"
+        # bug ticket: https://trac.nginx.org/nginx/ticket/97
+        try_files $uri $uri/ /backend/web/index.php$is_args$args;
+
+        # omit static files logging, and if they don't exist, avoid processing by Yii (uncomment if necessary)
+        #location ~ ^/admin/.+\.(css|js|ico|png|jpe?g|gif|svg|ttf|mp4|mov|swf|pdf|zip|rar)$ {
+        #    log_not_found off;
+        #    access_log off;
+        #    try_files $uri =404;
+        #}
+
+        location ~ ^/admin/assets/.+\.php(/|$) {
+            deny all;
+        }
     }
 
-   # uncomment to avoid processing of calls to non-existing static files by Yii
-   #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-   #    try_files $uri =404;
-   #}
-   #error_page 404 /404.html;
+    location ~ ^/.+\.php(/|$) {
+        rewrite (?!^/((frontend|backend)/web|admin|chainatweb))^ /frontend/web$uri break;
+        rewrite (?!^/backend/web)^/admin(/.+)$ /backend/web$1 break;
+        rewrite (?!^/chainatweb/public)^/kioskregis(/.+)$ /chainatweb/public$1 break;
 
-   location ~ \.php$ {
-       include fastcgi_params;
-       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-       fastcgi_pass   php:9000;
-       try_files $uri =404;
-   }
+        fastcgi_pass   php:9000;
+        fastcgi_split_path_info ^(.+\.php)(.*)$;
+        include /etc/nginx/fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        try_files $fastcgi_script_name =404;
+    }
 
-   location ~ /\.(ht|svn|git) {
-       deny all;
-   }
+    location ~ /\. {
+        deny all;
+    }
 }
-
-# server {
-#    charset utf-8;
-#    client_max_body_size 128M;
-
-#    listen 8082; ## listen for ipv4
-#    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
-
-#    server_name q-banbung-docker.local;
-#    root /var/www/html/frontend/web;
-#    index index.php;
-
-#    access_log  /var/log/nginx/frontend-access.log;
-#    error_log   /var/log/nginx/frontend-error.log;
-
-#    location / {
-#        # Redirect everything that isn't a real file to index.php
-#        try_files $uri $uri/ /index.php$is_args$args;
-#    }
-
-#    # uncomment to avoid processing of calls to non-existing static files by Yii
-#    #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
-#    #    try_files $uri =404;
-#    #}
-#    #error_page 404 /404.html;
-
-#    location ~ \.php$ {
-#        include fastcgi_params;
-#        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-#        fastcgi_pass   php_srisawat:9000;
-#        try_files $uri =404;
-#    }
-
-#    location ~ /\.(ht|svn|git) {
-#        deny all;
-#    }
-# }
-
 
