--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,59 @@
+# AddDefaultCharset UTF-8
+# <IfModule mod_rewrite.c>
+#     Options FollowSymlinks
+#     RewriteEngine on
+#     RewriteRule ^$ frontend/web/         [L]
+#     RewriteRule ^(.+)?$ frontend/web/$1  [L]
+# </IfModule>      
 AddDefaultCharset UTF-8
-<IfModule mod_rewrite.c>
-    Options FollowSymlinks
-    RewriteEngine on
-    RewriteRule ^$ frontend/web/         [L]
-    RewriteRule ^(.+)?$ frontend/web/$1  [L]
-</IfModule>      
+
+Options FollowSymLinks
+DirectoryIndex index.php index.html
+RewriteEngine on
+
+RewriteRule /\. - [L,F]
+
+# define the app environment variable
+RewriteCond %{REQUEST_URI} !^/((frontend|backend|chainatweb)/web|admin|kioskregis)
+RewriteRule ^ - [E=APP:frontend]
+RewriteCond %{REQUEST_URI} (?!^/backend/web)^/admin
+RewriteRule ^ - [E=APP:backend]
+RewriteCond %{REQUEST_URI} (?!^/chainatweb/public)^/kioskregis
+RewriteRule ^ - [E=APP:chainatweb]
+
+# rewrite the URI of the frontend app
+RewriteCond %{ENV:APP} =frontend
+RewriteRule ^ frontend/web%{REQUEST_URI}
+# if a directory or a file exists, use the request directly
+RewriteCond %{ENV:APP} =frontend
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward the request to index.php
+RewriteRule ^ frontend/web/index.php [L]
+
+# redirect to the URL without a trailing slash (uncomment if necessary)
+#RewriteRule ^admin/$ /admin [L,R=301]
+
+# rewrite the URI of the backend app
+RewriteCond %{ENV:APP} =backend
+RewriteRule ^admin/?(.*)$ backend/web/$1
+# if a directory or a file exists, use the request directly
+RewriteCond %{ENV:APP} =backend
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward the request to index.php
+RewriteRule ^ backend/web/index.php [L]
+
+# rewrite the URI of the chainatweb app
+RewriteCond %{ENV:APP} =chainatweb
+RewriteRule ^kioskregis/?(.*)$ chainatweb/public/$1
+# if a directory or a file exists, use the request directly
+RewriteCond %{ENV:APP} =chainatweb
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward the request to index.php
+RewriteRule ^ chainatweb/public/index.html [L]
+
+# handle a directory trailing slash, redirect to the initial URI instead the rewritten one
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^(.+[^/])$ %{REQUEST_URI}/ [L,R=301]
