--- a/docker/node/package.json
+++ b/docker/node/package.json
@@ -25,6 +25,7 @@
         "cors": "^2.8.5",
         "dotenv": "^8.6.0",
         "express": "^4.17.1",
+        "firebase-admin": "^9.9.0",
         "http-assert": "^1.4.1",
         "knex": "^0.95.5",
         "multiparty": "^4.2.2",
