--- a/docker/nginx/conf.d/01-frontend.conf
+++ b/docker/nginx/conf.d/01-frontend.conf
@@ -28,7 +28,7 @@ server {
     }
 
     location /kioskregis/ {
-        proxy_pass http://kiosk:8080/;
+        proxy_pass http://kioskregis:8080/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
@@ -38,7 +38,7 @@ server {
     }
 
     location /kioskmed/ {
-        proxy_pass http://kiosk:8081/;
+        proxy_pass http://kioskmed:8081/;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
