--- a/docker/node/.env.prod
+++ b/docker/node/.env.prod
@@ -1,5 +1,5 @@
 DB_HOST=db
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD=root_db
-DB_DATABASE=db_chainat_hs
+DB_PASSWORD=Andaman888
+DB_DATABASE=queue_standard_3
