#pun //edit port และ ชื่อ project

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:latest
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-COPY package.json /usr/src/app/
+RUN mkdir -p /usr/src/qstd3
+WORKDIR /usr/src/qstd3
+COPY package.json /usr/src/qstd3/
 RUN npm install
-COPY . /usr/src/app
-COPY .env.prod /usr/src/app/.env
-EXPOSE 3000
+COPY . /usr/src/qstd3
+COPY .env.prod /usr/src/qstd3/.env
+EXPOSE 3003
 CMD ["npm", "start"]
