--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,3 @@
-# AddDefaultCharset UTF-8
-# <IfModule mod_rewrite.c>
-#     Options FollowSymlinks
-#     RewriteEngine on
-#     RewriteRule ^$ frontend/web/         [L]
-#     RewriteRule ^(.+)?$ frontend/web/$1  [L]
-# </IfModule>      
 AddDefaultCharset UTF-8
 
 Options FollowSymLinks
@@ -14,12 +7,14 @@ RewriteEngine on
 RewriteRule /\. - [L,F]
 
 # define the app environment variable
-RewriteCond %{REQUEST_URI} !^/((frontend|backend|chainatweb)/web|admin|kioskregis)
+RewriteCond %{REQUEST_URI} !^/((frontend|backend|storage|api)/web|admin|storage|api)
 RewriteRule ^ - [E=APP:frontend]
 RewriteCond %{REQUEST_URI} (?!^/backend/web)^/admin
 RewriteRule ^ - [E=APP:backend]
-RewriteCond %{REQUEST_URI} (?!^/chainatweb/public)^/kioskregis
-RewriteRule ^ - [E=APP:chainatweb]
+RewriteCond %{REQUEST_URI} (?!^/storage/web)^/storage
+RewriteRule ^ - [E=APP:storage]
+RewriteCond %{REQUEST_URI} (?!^/api/web)^/api
+RewriteRule ^ - [E=APP:api]
 
 # rewrite the URI of the frontend app
 RewriteCond %{ENV:APP} =frontend
@@ -44,15 +39,31 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # otherwise forward the request to index.php
 RewriteRule ^ backend/web/index.php [L]
 
-# rewrite the URI of the chainatweb app
-RewriteCond %{ENV:APP} =chainatweb
-RewriteRule ^kioskregis/?(.*)$ chainatweb/public/$1
+# redirect to the URL without a trailing slash (uncomment if necessary)
+#RewriteRule ^storage/$ /storage [L,R=301]
+
+# rewrite the URI of the backend app
+RewriteCond %{ENV:APP} =storage
+RewriteRule ^storage/?(.*)$ storage/web/$1
 # if a directory or a file exists, use the request directly
-RewriteCond %{ENV:APP} =chainatweb
+RewriteCond %{ENV:APP} =storage
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # otherwise forward the request to index.php
-RewriteRule ^ chainatweb/public/index.html [L]
+RewriteRule ^ storage/web/index.php [L]
+
+# redirect to the URL without a trailing slash (uncomment if necessary)
+#RewriteRule ^api/$ /api [L,R=301]
+
+# rewrite the URI of the api app
+# RewriteCond %{ENV:APP} =api
+# RewriteRule ^api/?(.*)$ api/web/$1
+# # if a directory or a file exists, use the request directly
+# RewriteCond %{ENV:APP} =api
+# RewriteCond %{REQUEST_FILENAME} !-f
+# RewriteCond %{REQUEST_FILENAME} !-d
+# # otherwise forward the request to index.php
+# RewriteRule ^ api/web/index.php [L]
 
 # handle a directory trailing slash, redirect to the initial URI instead the rewritten one
 RewriteCond %{REQUEST_FILENAME} -d
