--- a/docker/node/package.json
+++ b/docker/node/package.json
@@ -24,21 +24,22 @@
         "bootstrap": "^3.4.1",
         "bull": "^3.22.7",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^8.6.0",
         "express": "^4.17.1",
         "firebase-admin": "^9.9.0",
+        "http-assert": "^1.5.0",
+        "http-errors": "^1.8.0",
         "knex": "^0.95.5",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.1",
+        "morgan": "^1.10.0",
         "multiparty": "^4.2.2",
         "mysql": "^2.18.1",
+        "node-rsa": "^1.1.1",
         "nodemon": "^1.19.4",
         "qs": "^6.10.1",
         "querystring": "^0.2.1",
-        "crypto": "^1.0.1",
-        "http-assert": "^1.5.0",
-        "http-errors": "^1.8.0",
-        "lodash": "^4.17.21",
-        "morgan": "^1.10.0",
-        "node-rsa": "^1.1.1",
         "soap": "^0.42.0",
         "socket.io": "^4.1.3",
         "socket.io-client": "^4.2.0"
